# mad_bot

./: calibration_data.npz
install/: local_setup.sh  setup.sh
install/mad_bot/lib/mad_bot/: camera_controller  movement_controller
install/mad_bot/share/mad_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mad_bot/share/mad_bot/launch/: mad_bot.launch.py
install/mad_bot/share/mad_bot/model/: mad_bot.urdf
log/: latest_build
mad_bot/: setup.cfg  setup.py
mad_bot/config/: mad_bot.rviz  ros_gz_bridge.yaml
mad_bot/launch/: mad_bot.launch.py
mad_bot/mad_bot/: april_tag_controller.py  camera_controller.py  movement_controller.py
mad_bot/model/: mad_bot.sdf  mad_bot.urdf
mad_bot/model/april_tag/: april_tag.dae  april_tag.sdf  april_tag_1.sdf  april_tag_2.sdf  april_tag_3.sdf
mad_bot/world/: world.sdf
